<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/card_background"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            app:srcCompat="@drawable/cancel_dialog_icon" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/time_box_shape"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hour_time_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@null"
                android:fontFamily="@font/font_light"
                android:gravity="center"
                android:inputType="number|textAutoCorrect"
                android:maxLength="2"
                android:text="04"
                android:textColor="@color/headerBackgroundColor"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:fontFamily="@font/font_light"
                android:gravity="center"
                android:text=":"
                android:textColor="@color/headerBackgroundColor"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minutes_time_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@null"
                android:fontFamily="@font/font_light"
                android:gravity="center"
                android:inputType="number|textAutoCorrect"
                android:maxLength="2"
                android:text="04"
                android:textColor="@color/headerBackgroundColor"
                android:textSize="24sp" />

        </LinearLayout>
    </FrameLayout>


    <TimePicker
        android:id="@+id/time_picker"
        style="@style/TimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        android:timePickerMode="spinner"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/font_light"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/headerBackgroundColor"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/font_light"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/headerBackgroundColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <NumberPicker
                android:id="@+id/minute_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/DefaultNumberPickerTheme"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/scroll_minute_picker" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <NumberPicker
                android:id="@+id/hour_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/DefaultNumberPickerTheme"

                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/scroll_hour_picker" />
        </FrameLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blue_background"
        android:fontFamily="@font/font_light"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_picker_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font_light"
            android:text="@string/title_time_picker"
            android:textColor="@color/headerBackgroundColor"

            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_picker_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/font_light"
            android:text="@string/cancel"
            android:textColor="@color/headerBackgroundColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_picker_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/font_light"
            android:gravity="end"
            android:text="@string/now"
            android:textColor="@color/headerBackgroundColor"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
