<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/card_background"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/swipe_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="3dp"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:weightSum="1"

        android:layoutDirection="rtl"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/from_date_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layoutDirection="rtl"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fromdate_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_calender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_one_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/week_color"
                    android:textSize="14sp" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection_item"
                android:textSize="14sp"
                android:textColor="@color/week_color"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/to_date_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/todate_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_calender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_two_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/end_date"
                    android:textColor="@color/week_color"
                    android:textSize="14sp" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/todate_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection_item"
                android:textColor="@color/week_color"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_Accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_Accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تایید"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:gravity="center"
             />

    </LinearLayout>
</LinearLayout>
